Fix a bug in spacing photos

--- a/views/css/partials/_layout.sass
+++ b/views/css/partials/_layout.sass
@@ -117,8 +117,8 @@ body
 
   #photos
 
-    ol li
-      +trailer(2)
+    ul li
+      +trailer
 
     img
       float: none
